Izmjene na backend kodu i dodani moji testovi