@@ -7,6 +7,7 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -14,6 +15,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -24,14 +26,33 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(csrf -> csrf.disable())
+                // CORS MORA biti PRVI
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // Isključi CSRF za REST API
+                .csrf(csrf -> csrf.disable())
+
+                // Session management - IF_REQUIRED za session-based auth
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
+                )
+
+                // Authorization rules
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/register", "/api/auth/login").permitAll()
+                        // Javni endpointi
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/auth/register").permitAll()
+                        .requestMatchers("/api/auth/login").permitAll()
+                        // Ostalo zahtijeva autentifikaciju
                         .anyRequest().authenticated()
                 )
+
+                // Isključi form login
                 .formLogin(form -> form.disable())
+
+                // Isključi HTTP Basic
                 .httpBasic(httpBasic -> httpBasic.disable());
+
         return http.build();
     }
 
@@ -48,10 +69,26 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+
+        // Eksplicitno dozvoli origin
+        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        // ILI specifično:
+        // configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:3000"));
+
+        // Dozvoli sve metode
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"));
+
+        // Dozvoli sve headere
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+
+        // Izloži headere
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+
+        // Dozvoli credentials (cookies, auth headers)
         configuration.setAllowCredentials(true);
+
+        // Cache preflight za 1h
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
